[Fix] navbar sticky broken on safari Remove unnecessary `height: 100%` and `overflow-x: hidden`

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -21,16 +21,8 @@
   cursor: pointer;
 }
 
-html {
-  // use 100% instead of 100vh to prevent strange behavior on mobile chrome
-  width: 100%;
-  height: 100%;
-}
-
 body {
-  // use 100% instead of 100vh to prevent strange behavior on mobile chrome
   width: 100%;
-  height: 100%;
 
   position: relative;
   overflow-x: hidden;
@@ -43,10 +35,7 @@ body {
 }
 
 #app {
-  // use 100% instead of 100vh to prevent strange behavior on mobile chrome
   width: 100%;
-  height: 100%;
-  overflow-x: hidden;
   margin: 0;
 }
 
